fixed horizontal scroll

--- a/frontend/src/components/games/games_list.css
+++ b/frontend/src/components/games/games_list.css
@@ -1,6 +1,5 @@
 .game-block {
-    display: inline-flex;
-    flex-direction: column;
+    display: inline-block;
     border: 1px solid black;
     width: 200px;
     height: 100px;
